--- a/mDNIe/bin/AndroidManifest.xml
+++ b/mDNIe/bin/AndroidManifest.xml
@@ -21,6 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name="Setting"></activity>
+        <activity android:name="MultipleChoiceListView"></activity>
     </application>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
