--- a/mDNIe/AndroidManifest.xml
+++ b/mDNIe/AndroidManifest.xml
@@ -4,26 +4,33 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="9"
-        android:targetSdkVersion="9" />
+        android:minSdkVersion="19"
+        android:targetSdkVersion="21" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" >
+    </uses-permission>
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        android:label="@string/app_name" >
         <activity
             android:name="com.samsung.ip.JniIPActivity"
-            android:label="@string/title_activity_jni_gl" >
+            android:label="@string/title_activity_jni_gl"
+            android:theme="@android:style/Theme.Holo.Light" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="Setting"></activity>
-        <activity android:name="MultipleChoiceListView"></activity>
-        <activity android:name="SetParameter"></activity>
+        <activity android:name="Setting" >
+        </activity>
+        <activity android:name="MultipleChoiceListView" >
+        </activity>
+        <activity android:name="SetParameter" >
+        </activity>
     </application>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
 </manifest>
