--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,8 @@
             android:name="ParameterSettingListView"
             android:theme="@android:style/Theme.Holo.Light" >
         </activity>
+               <activity android:name=".filelist.Main"></activity>
+
     </application>
 
 </manifest>
